--- a/public/index.html
+++ b/public/index.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>rock&bull;paper&bull;scissors</title>
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.1/css/bootstrap.min.css"> -->
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
-  </head>
-  <body>
-    <noscript>
-      <div class="alert alert-danger">
-        <h3>ERROR</h3>
-        <p>We're sorry but rock&bull;paper&bull;scissors doesn't work properly without JavaScript enabled. Please enable it to continue.</p>
-      </div>
-    </noscript>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+  <title>rock&bull;paper&bull;scissors</title>
+</head>
+
+<body>
+  <noscript>
+    <div class="alert alert-danger">
+      <h3>ERROR</h3>
+      <p>We're sorry but rock&bull;paper&bull;scissors doesn't work properly without JavaScript enabled. Please enable it
+        to continue.</p>
+    </div>
+  </noscript>
+  <div id="app"></div>
+  <!-- built files will be auto injected -->
+</body>
+
 </html>
